Fixed alignment problems in top section, section 1 and 2

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
 }
 
 .top-section-left{
-    width: 500px;
+    width: 550px;
     color: white;
 }
 
@@ -96,7 +96,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 0px 50px 0px;
+    padding: 0px 200px 50px 200px;
 }
 
 .section-1 h2{
@@ -105,7 +105,9 @@ body{
 
 .sub-section-1{
     display: flex;
-    gap: 80px;
+    justify-content: space-between;
+    width: 1070px;
+    
 }
 
 .card{
